; ModuleID = '/home/carl/AnghaBench/TDengine/src/client/src/extr_tscSchemaUtil.c_tsGetSchema.c'
source_filename = "/home/carl/AnghaBench/TDengine/src/client/src/extr_tscSchemaUtil.c_tsGetSchema.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.SSchema = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.SSchema* @tsGetSchema(i32* %0) #0 {
  %2 = alloca %struct.SSchema*, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %4 = load i32*, i32** %3, align 8
  %5 = icmp eq i32* %4, null
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  store %struct.SSchema* null, %struct.SSchema** %2, align 8
  br label %10

7:                                                ; preds = %1
  %8 = load i32*, i32** %3, align 8
  %9 = call %struct.SSchema* @tsGetColumnSchema(i32* %8, i32 0)
  store %struct.SSchema* %9, %struct.SSchema** %2, align 8
  br label %10

10:                                               ; preds = %7, %6
  %11 = load %struct.SSchema*, %struct.SSchema** %2, align 8
  ret %struct.SSchema* %11
}

declare dso_local %struct.SSchema* @tsGetColumnSchema(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
